--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,8 +1,10 @@
 .about {
-	// height: 100vh;
+	min-height: 100vh;
 
 	&__img {
-		height: 100vh;
+		background-position: center;
+		background-attachment: fixed;
+		min-height: 100vh;
 		transition: background-image 0.5s ease-in-out;
 		display: flex;
 		justify-content: space-between;
