--- a/src/scss/pages/_videos.scss
+++ b/src/scss/pages/_videos.scss
@@ -3,9 +3,11 @@
 	justify-content: space-between;
 
 	background-image: url("../../img/background-video.png");
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	// height: 100%;
+	background-attachment: fixed;
+	min-height: 100vh;
 
 	&__header {
 		display: flex;
